--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -29,7 +29,8 @@
                         </div>
                         <div class="navbar-nav">
                             {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{ url_for('account') }}">My Account</a>
+                                <a class="nav-item nav-link" href="{{ url_for('account') }}">My Account</a>
+                                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                             {% else %}
                                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
@@ -54,19 +55,6 @@
                         {% endif %}
                     {% endwith %}
                     {% block content %}{% endblock %}
-                </div>
-                <div class="col-md-4">
-                    <div class="content-section">
-                        <h3>Our Sidebar</h3>
-                            <p class='text-muted'>You can put any information here you'd like.
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                                <li class="list-group-item list-group-item-light">Announcements</li>
-                                <li class="list-group-item list-group-item-light">Calendars</li>
-                                <li class="list-group-item list-group-item-light">etc</li>
-                            </ul>
-                            </p>
-                    </div>
                 </div>
             </div>
         </main>
