--- a/flask_blog/templates/login.html
+++ b/flask_blog/templates/login.html
@@ -44,7 +44,7 @@
                 {{ form.submit(class="btn btn-outline-info ") }}
             </div>
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
             </small>
         </form>
 
@@ -52,7 +52,7 @@
     <div class="border-top pt-3">
         
         <small class="text-muted">
-            New User? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+            New User? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up Now</a>
         </small>
 
     </div>
